2024-03-03 [1.42 Bld 263]

- Addition    : Add support for Sharp SC62015/SC61860 (contribution
                by Haruo Asano)

2024-02-11 [1.42 Bld 262]

- Addition    : New command line switch '-underscore-macroargs' to
                allow underscores in macro parameter names
- Change      : No longer allow omission of an empty index argument
                on 6809.  Use 'plainbase on' or '-plainbase' to allow
                this again.
- Bugfix      : 'DS 0' to align program counter did not operate
                correctly on addresses beyond 2 GByte

2024-01-28 [1.42 Bld 261]

- Bugfix      : On Z80-like targets, also do not parse double/triple
                -/+ as indirect expression
- Bugfix      : On NS32K, make parsing of address expressions more
                robust against arguments like '\'' or X'xx

2023-12-31 [1.42 Bld 260]

- Bugfix      : On Z80-like targets, do not parse single -/+ as
                indirect expression
- Bugfix      : If address overflow occured, the code that triggered
                it was displayed anyway in the listing, and with
                a wrong start address.

2023-12-27 [1.42 Bld 259]

- Bugfix      : On 68K, correctly skip spaces in indirect
                addressing argument lists

2023-12-23 [1.42 Bld 258]

- Bugfix      : disallow a few addressing modes for TST on 68K
- Bugfix      : reduce size of icon resource for Windows binaries

2023-12-17 [1.42 Bld 257]

- Change      : On F8, I/O accesses to addresses 0 to 3 via IN or
                OUT now result in a warning, since they are
                only accessible via INS and OUTS.
- Bugfix      : correct several 8087 instructions

2023-12-02 [1.42 Bld 256]

- Bugfix      : TLCS-90(0): Allow arguments of LDA, JP amd CALL to be
                written without enclosing parentheses.
- Addition    : Support register symbols for SC/MP
- Change      : On SC/MP, Usage of -128 as displacement with P1...P3
                emits a warning instead of an error 
