@@ -524,6 +524,16 @@
                  high-performance-embedded-workshop-rx-family-\\
                  cc-compiler-package-v101-users-manual-includes-v102
 
+\bibitem{Sharp1350} Sharp: \\
+                 {\em Pocket Computer PC-1350 Machine Language Reference Manual.} \\
+                 https://pockemul.com/wp-content/uploads/2022/12/ \\
+                 PC1350\_ML\_EN.pdf
+
+\bibitem{SharpEsrL0} Sharp Corporation: \\
+                 {\em ESR-L Instruction Manual.} \\
+                 https://web.archive.org/web/20060521205349if\_/http:// \\
+                 www.sarnau.info:80/files/ESR-LInstructionManual.pdf
+
 \bibitem{Sig2650} Signetics Corporation: \\
                  {\em Signetics 2650 Microprocessor.} \\
                  1975
