@@ -1,3 +1,9 @@
+2024-03-08 [1.42 Bld 264]
+
+- Bugfix      : On Zx80, do not use indexed mode with extended
+                displacement if the target is not Z380, even in
+                case of a first-pass-unknown symbol.
+
 2024-03-03 [1.42 Bld 263]
 
 - Addition    : Add support for Sharp SC62015/SC61860 (contribution
